add_subdirectory(can1)
add_subdirectory(cpp1)
add_subdirectory(dma1)
add_subdirectory(os1)
add_subdirectory(os2)
add_subdirectory(serial1)
add_subdirectory(serial2)
add_subdirectory(stepper1)
add_subdirectory(stepper2)
add_subdirectory(test1)
add_subdirectory(blinky)
add_subdirectory(adc1)
add_subdirectory(max7219)
